--- a/IIoTS_Lab2.csproj
+++ b/IIoTS_Lab2.csproj
@@ -69,4 +69,10 @@
 	  </COMReference>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="SettingsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
